# pre-commit-commit-msg-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.rst  pyproject.toml
examples/: conjunction_in_summary.txt  description_too_long.txt  punctuated_summary.txt  second_line_not_empty.txt  summary_not_capitalized.txt  summary_not_imperative.txt  summary_too_long.txt  summary_too_short.txt
pre_commit_commit_msg_hooks/: check_description_max_length.py  check_second_line_empty.py  check_summary_capitalized.py  check_summary_conjunction.py  check_summary_imperative.py  check_summary_max_length.py  check_summary_min_length.py  check_summary_punctuation.py  common.py  verbs-wordlist.txt
tests/: test_checks.py
