[tool.poetry]
name = "pre-commit-commit-msg-hooks"
version = "0.1.0"
description = "A collection of checks for the commit-msg for pre-commit."
authors = ["Ronni Elken Lindsgaard <ronni.lindsgaard@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/rlindsgaard/pre-commit-commit-msg-hooks"
include = ["pre_commit_commit_msg_hooks/verb-wordlist.txt"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
check-description-max-length = "pre_commit_commit_msg_hooks.check_description_max_length:main"
check-second-line-empty = "pre_commit_commit_msg_hooks.check_second_line_empty:main"
check-summary-capitalized = "pre_commit_commit_msg_hooks.check_summary_capitalized:main"
check-summary-conjunction = "pre_commit_commit_msg_hooks.check_summary_conjunction:main"
check-summary-imperative = "pre_commit_commit_msg_hooks.check_summary_imperative:main"
check-summary-max-length = "pre_commit_commit_msg_hooks.check_summary_max_length:main"
check-summary-min-length = "pre_commit_commit_msg_hooks.check_summary_min_length:main"
check-summary-punctuation = "pre_commit_commit_msg_hooks.check_summary_punctuation:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
